src/objects/Case/fields/CSM_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Site_Name__c</fullName>
    <label>Site Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>ACH AES - AT Airport Systems - Simi Valley</fullName>
            </value>
            <value>
                <fullName>ACH AES - AT - Airport Systems - Sun Valley</fullName>
            </value>
            <value>
                <fullName>ACH AES - AT - Lighting &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>ACH AES - BRGA - Glendale</fullName>
            </value>
            <value>
                <fullName>ACH AES - BRGA - Sarasota</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Alliance</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Australia Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Dallas Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - France Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Ft. Lauderdale Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS HAT - Ft. Lauderdale</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS HAT - Phoenix</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Long Beach Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Ohio Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Phoenix</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Savannah Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Seattle Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - UK Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - CS - Wichita Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES Albuquerque</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Clearwater Space</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Glendale Space</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES Golden Valley</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Houston</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Minneapolis</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Phoenix Service Center</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Plymouth</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Redmond</fullName>
            </value>
            <value>
                <fullName>ACH AES - DSES - Roseville</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>