src/objects/Case/fields/CSN__c.field-meta.xml
<CustomField>
    <fullName>CSN__c</fullName>
    <label>CSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>