src/objects/Case/fields/Customer_issue_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_issue_date__c</fullName>
    <label>Customer issue date</label>
    <type>Date</type>
</CustomField>