src/objects/Case/fields/Customer_PO_RO_WONumber__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_RO_WONumber__c</fullName>
    <description>Text Field used to hold the PO number. 
05/22 - Set to external ID for PO/SN deployment to avoid 554 connection error in Salesforce</description>
    <externalId>true</externalId>
    <label>Customer PO/RO/WO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>