src/objects/Case/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <label>Customer Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>