src/objects/Case/fields/Customer_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Date__c</fullName>
    <defaultValue>NOW()+1</defaultValue>
    <label>Customer Request Date</label>
    <type>Date</type>
</CustomField>