src/objects/Case/fields/Customer_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Level__c</fullName>
    <label>Customer Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>