src/objects/Case/fields/Customer_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sold_To__c</fullName>
    <label>Customer Sold To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>