src/objects/Case/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>TEXT(Account.Customer_Status__c)</formula>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>