src/objects/Case/fields/Customer_Update_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Update_Frequency__c</fullName>
    <description>Frequency value used for Technical Case communication by GTO team</description>
    <label>Customer Update Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Priority__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every 30 mins</fullName>
            </value>
            <value>
                <fullName>Every 1 Hour</fullName>
            </value>
            <value>
                <fullName>Every 2 hours</fullName>
            </value>
            <value>
                <fullName>Every 4 hours</fullName>
            </value>
            <value>
                <fullName>Every 8 hours</fullName>
            </value>
            <value>
                <fullName>Every 12 hours</fullName>
            </value>
            <value>
                <fullName>Every 24 hours</fullName>
            </value>
            <value>
                <fullName>Every 48 hours</fullName>
            </value>
            <value>
                <fullName>Every 72 hours</fullName>
            </value>
            <value>
                <fullName>Every 7 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>