src/objects/Case/fields/Dassault_Operator__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Operator__c</fullName>
    <description>Dassault Operator</description>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>