src/objects/Case/fields/Data_Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Analysis_Status__c</fullName>
    <label>Data Analysis Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Analysis In-Progress</fullName>
            </value>
            <value>
                <fullName>Data Analysis Completed</fullName>
            </value>
            <value>
                <fullName>Data Analysis Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>