src/objects/Case/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <inlineHelpText>Date needed for the replacement part</inlineHelpText>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>