src/objects/Case/fields/Date_of_Failure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Failure__c</fullName>
    <label>Date of Failure</label>
    <type>Date</type>
</CustomField>