src/objects/Case/fields/Date_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Installation__c</fullName>
    <label>Date of Installation</label>
    <type>Date</type>
</CustomField>