src/objects/Case/fields/Date_Time_Stamp_First_Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Stamp_First_Assigned_to_User__c</fullName>
    <label>Date Time Stamp First Assigned to User</label>
    <type>DateTime</type>
</CustomField>