src/objects/Case/fields/Date_Time_Stamp_User_Assignment_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Stamp_User_Assignment_Change__c</fullName>
    <label>Date Time Stamp User Assignment Change</label>
    <type>DateTime</type>
</CustomField>