src/objects/Case/fields/DateSetForOpen__c.field-meta.xml
<CustomField>
    <fullName>DateSetForOpen__c</fullName>
    <label>DateSetForOpen</label>
    <type>DateTime</type>
</CustomField>