src/objects/Case/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <description>Calculates Day of the week starting with Sunday</description>
    <formula>CASE(MOD( DATEVALUE( Created_date__c ) - DATE(1900,1,7) , 7) , 0 , &apos;Sunday&apos; , 1 , &apos;Monday&apos; , 2 , &apos;Tuesday&apos; , 3 , &apos;Wednesday&apos; , 4 , &apos;Thursday&apos; , 5, &apos;Friday&apos; , 6 ,  &apos;Saturday&apos; ,  &apos;No Day Found&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display the Day of the week as example (Monday)</inlineHelpText>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>