src/objects/Case/fields/Dealer_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DSPC_Dealer/Distributor</description>
    <inlineHelpText>Please enter the Dealer/Distributor Name</inlineHelpText>
    <label>Dealer/Distributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>