src/objects/Case/fields/Denied_Party_Alert__c.field-meta.xml
<CustomField>
    <fullName>Denied_Party_Alert__c</fullName>
    <formula>if ( Contact.Account.Denied_Party_Alert__c ==&apos;Potential Denied Party Match Red&apos;,

IMAGE(&quot;/resource/1308762243000/Denied_Party_Alert_Red&quot;, &quot;Denied Party Alert&quot;,25,300)

, if(Contact.Account.Denied_Party_Alert__c==&apos;Potential Denied Party Match Blue&apos;,IMAGE(&quot;/resource/1308762243000/Denied_Party_Alert&quot;, &quot;Denied Party Alert&quot;,25,220),null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Denied Party Alert</label>
    <type>Text</type>
</CustomField>