src/objects/Case/fields/Detail_Class__c.field-meta.xml
<CustomField>
    <fullName>Detail_Class__c</fullName>
    <label>Detail Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Class__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACARS Weather Graphics</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Access Issues – Tech Pubs</fullName>
            </value>
            <value>
                <fullName>Account Change</fullName>
            </value>
            <value>
                <fullName>Account Services</fullName>
            </value>
            <value>
                <fullName>Acknowledgement</fullName>
            </value>
            <value>
                <fullName>ACM</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>ACUKWIK</fullName>
            </value>
            <value>
                <fullName>Adaptiv Requests</fullName>
            </value>
            <value>
                <fullName>Add/Rem Option</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>ADDRESS UPDATE</fullName>
            </value>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>AERO C</fullName>
            </value>
            <value>
                <fullName>AERO-H, H+, I</fullName>
            </value>
            <value>
                <fullName>Aerospace Catalog</fullName>
            </value>
            <value>
                <fullName>AIRCELL</fullName>
            </value>
            <value>
                <fullName>Aircraft Nav Computer/Software Issue</fullName>
            </value>
            <value>
                <fullName>Aircraft Report Delivery</fullName>
            </value>
            <value>
                <fullName>Air Waybill Number</fullName>
            </value>
            <value>
                <fullName>Alternate Part Number</fullName>
            </value>
            <value>
                <fullName>AMI</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>AOG – IFSD Commanded</fullName>
            </value>
            <value>
                <fullName>AOG – IFSD Uncommanded</fullName>
            </value>
            <value>
                <fullName>AOG - IFS Technical / Alert</fullName>
            </value>
            <value>
                <fullName>AOG - Parts Request</fullName>
            </value>
            <value>
                <fullName>APG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>