src/objects/Case/fields/Dispatch_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Approval_Date__c</fullName>
    <label>Deployment Approval Date</label>
    <type>Date</type>
</CustomField>