src/objects/Case/fields/Dispatch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Reason__c</fullName>
    <label>Deployment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Technical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>TEST 1</fullName>
            </value>
            <value>
                <fullName>TEST 2</fullName>
            </value>
            <value>
                <fullName>Advanced Troubleshooting / Support</fullName>
            </value>
            <value>
                <fullName>Conference Support</fullName>
            </value>
            <value>
                <fullName>Business Request / Need</fullName>
            </value>
            <value>
                <fullName>WTTF – Entry into Service – BGA</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>SOF Incident / Accident Support</fullName>
            </value>
            <value>
                <fullName>TSE Inspection MSP / HAPP</fullName>
            </value>
            <value>
                <fullName>AOG Onsite Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>