src/objects/Case/fields/Do_not_send_to_portal__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_to_portal__c</fullName>
    <formula>Account.Do_Not_Send_to_Portal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do not send to portal</label>
    <type>Checkbox</type>
</CustomField>