src/objects/Case/fields/Effect_on_Operation__c.field-meta.xml
<CustomField>
    <fullName>Effect_on_Operation__c</fullName>
    <label>Effect on Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Turnback</fullName>
            </value>
            <value>
                <fullName>Cancellation(TECH)</fullName>
            </value>
            <value>
                <fullName>Delay (Technical)</fullName>
            </value>
            <value>
                <fullName>Divert (Technical)</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled</fullName>
            </value>
            <value>
                <fullName>Flight Delayed&gt;Than 15 min</fullName>
            </value>
            <value>
                <fullName>Flight Delay more than 15 min</fullName>
            </value>
            <value>
                <fullName>Grounded</fullName>
            </value>
            <value>
                <fullName>Ground Turnback</fullName>
            </value>
            <value>
                <fullName>Late Arrival</fullName>
            </value>
            <value>
                <fullName>Mel Dispatch</fullName>
            </value>
            <value>
                <fullName>Mission Aborted</fullName>
            </value>
            <value>
                <fullName>No Cancel or Delay &gt;15 Min</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
            <value>
                <fullName>See Amplifying remarks</fullName>
            </value>
            <value>
                <fullName>Takeoff Aborted.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>