src/objects/Case/fields/Emailbox_Origin__c.field-meta.xml
<CustomField>
    <fullName>Emailbox_Origin__c</fullName>
    <description>Field used to hold the list of actual email box for the E2CP Comment emailing function</description>
    <inlineHelpText>Field used to hold the list of actual email box for the E2CP Comment emailing function</inlineHelpText>
    <label>Emailbox Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E2CP Test</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email-ACT</fullName>
            </value>
            <value>
                <fullName>Email-ACT-DoNotReply</fullName>
            </value>
            <value>
                <fullName>Email-ACTinternal</fullName>
            </value>
            <value>
                <fullName>Email-AeroAirbus</fullName>
            </value>
            <value>
                <fullName>Email-AeroBoeing</fullName>
            </value>
            <value>
                <fullName>Email-AeroComponents</fullName>
            </value>
            <value>
                <fullName>Email-AeroCPSBGA</fullName>
            </value>
            <value>
                <fullName>Email-AeroCS.Xiamen</fullName>
            </value>
            <value>
                <fullName>Email-Aero Export Hold</fullName>
            </value>
            <value>
                <fullName>Email-AEROGCC</fullName>
            </value>
            <value>
                <fullName>Email-Aero GSE Orders</fullName>
            </value>
            <value>
                <fullName>Email-Aero GSE Quotes</fullName>
            </value>
            <value>
                <fullName>Email-Aero GSE Support</fullName>
            </value>
            <value>
                <fullName>Email-Aero GSE Vendor Support</fullName>
            </value>
            <value>
                <fullName>Email-AeroIDO</fullName>
            </value>
            <value>
                <fullName>Email-AEROPRO</fullName>
            </value>
            <value>
                <fullName>Email-AeroRepairs</fullName>
            </value>
            <value>
                <fullName>Email- AerospaceWarranty</fullName>
            </value>
            <value>
                <fullName>Email-Aerotechsupport</fullName>
            </value>
            <value>
                <fullName>Email-AMDB Production</fullName>
            </value>
            <value>
                <fullName>Email-Anniston.RFQ</fullName>
            </value>
            <value>
                <fullName>Email-AOG</fullName>
            </value>
            <value>
                <fullName>Email-APACACTinternal</fullName>
            </value>
            <value>
                <fullName>Email-ASWEBAdministration</fullName>
            </value>
            <value>
                <fullName>Email-ATR R&amp;O Internal</fullName>
            </value>
            <value>
                <fullName>Email-Avionics</fullName>
            </value>
            <value>
                <fullName>Email-Barbora</fullName>
            </value>
            <value>
                <fullName>Email-barbora.podhradska.aero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>