src/objects/Case/fields/Employee_EID_Trng__c.field-meta.xml
<CustomField>
    <fullName>Employee_EID_Trng__c</fullName>
    <description>Created for AERO Training project : Used in Online Training Form</description>
    <label>Employee EID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>