src/objects/Case/fields/End_Use_for_this_Part_Assembly__c.field-meta.xml
<CustomField>
    <fullName>End_Use_for_this_Part_Assembly__c</fullName>
    <description>End Use for this Part/Assembly</description>
    <label>End Use for this Part/Assembly</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>