src/objects/Case/fields/End_User_Address__c.field-meta.xml
<CustomField>
    <fullName>End_User_Address__c</fullName>
    <description>End User - Address</description>
    <label>End User - Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>