src/objects/Case/fields/Engine_APU_Reported_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_APU_Reported_Serial_Number__c</fullName>
    <inlineHelpText>Customer reported Engine/APU serial number.</inlineHelpText>
    <label>Engine/APU Reported Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>