src/objects/Case/fields/Engine_CSO__c.field-meta.xml
<CustomField>
    <fullName>Engine_CSO__c</fullName>
    <label>Engine CSO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>