src/objects/Case/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <label>Engine Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>