src/objects/Case/fields/Engine_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Engine_Out_Date__c</fullName>
    <label>Engine Out Date</label>
    <type>Date</type>
</CustomField>