src/objects/Case/fields/Engine_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Engine_Received_Date__c</fullName>
    <label>Engine Received Date</label>
    <type>Date</type>
</CustomField>