src/objects/Case/fields/Engine_S_N__c.field-meta.xml
<CustomField>
    <fullName>Engine_S_N__c</fullName>
    <label>Engine S/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>