src/objects/Case/fields/Estimated_Proposal_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Proposal_Value__c</fullName>
    <label>Estimated Proposal Value</label>
    <length>25</length>
    <type>Text</type>
</CustomField>