src/objects/Case/fields/Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date__c</fullName>
    <description>Created for Carrier Validation Project IT-15-190</description>
    <label>Estimated Ship Date</label>
    <type>Date</type>
</CustomField>