src/objects/Case/fields/Expected_Update__c.field-meta.xml
<CustomField>
    <fullName>Expected_Update__c</fullName>
    <label>Expected Update</label>
    <type>DateTime</type>
</CustomField>