src/objects/Case/fields/Export_Compliance_Content_ITAR_EAR__c.field-meta.xml
<CustomField>
    <fullName>Export_Compliance_Content_ITAR_EAR__c</fullName>
    <inlineHelpText>Select yes if export controlled data is in this case. Export controlled data may include drawings, specifications, instructions, BoMs or other technical data.  A yes check will result in a case review and update to remove the export controlled data.</inlineHelpText>
    <label>Export Compliance Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>