src/objects/Case/fields/Fault_Messages__c.field-meta.xml
<CustomField>
    <fullName>Fault_Messages__c</fullName>
    <label>Fault Messages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>