src/objects/Case/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <label>FCR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>