src/objects/Case/fields/FDE_Event__c.field-meta.xml
<CustomField>
    <fullName>FDE_Event__c</fullName>
    <label>FDE/Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>