src/objects/Case/fields/FER__c.field-meta.xml
<CustomField>
    <fullName>FER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FER</label>
    <type>Checkbox</type>
</CustomField>