src/objects/Case/fields/Field_Event__c.field-meta.xml
<CustomField>
    <fullName>Field_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Event</label>
    <referenceTo>Field_Event__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>