src/objects/Case/fields/First_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Call Resolution</label>
    <type>Checkbox</type>
</CustomField>