src/objects/Case/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Created for AERO Training project : Used in Special Training Request Form</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>