src/objects/Case/fields/FSE_Name_1__c.field-meta.xml
<CustomField>
    <fullName>FSE_Name_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSE Name 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>