src/objects/Case/fields/FSE_Name_2__c.field-meta.xml
<CustomField>
    <fullName>FSE_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSE Name 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>