src/objects/Case/fields/FSE_Name_3__c.field-meta.xml
<CustomField>
    <fullName>FSE_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSE Name 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>